front(fix): dark mode, a11y

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -30,6 +30,7 @@ $light-grey-border: #edeef3;
 $light-grey-border-dark: #d9d9d9;
 $light-color: #aaa;
 
+$black: #1A1A1A;
 $legende: #666;
 
 $radius: 7px;
