--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -132,6 +132,10 @@ body {
   color: variables.$orange !important;
 }
 
+.text-black {
+  color: variables.$black !important;
+}
+
 .text-text,
 .text-text input,
 .text-text .ant-input-group-addon {
